objects/Case/fields/ADB_Cert__c.field-meta.xml
<CustomField>
    <fullName>ADB_Cert__c</fullName>
    <description>To fetch the value from Policy Owner Sprint 5 PSI-27 |CTP-41</description>
    <label>ADB Cert.</label>
    <length>60</length>
    <type>Text</type>
</CustomField>