objects/Case/fields/Advisor_Code__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Code__c</fullName>
    <description>For CRU Post-Sale, it will store the writing agent code from CAS, to sent ANS/SMS and show in call script 
For CRU Orphan, it will become the pervious agent code</description>
    <label>Advisor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>