objects/Case/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <description>Added to store the Advisor Name for a Post Sales Case - computed from the Advisor_Code__c field provided by the source system. Sprint 5 - CTP 37 - Table K.</description>
    <label>Advisor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>