objects/Case/fields/Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Date__c</fullName>
    <description>to display the created date so that user can sort on date field in call list Sprint 5 PSI-27 |CTP-41</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Date</label>
    <type>DateTime</type>
</CustomField>