objects/Case/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <description>To display the branch code from Policy Owner Sprint 5 PSI-27 |CTP-41</description>
    <label>Branch Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>