objects/Case/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <defaultValue>"Not Yet Contact"</defaultValue>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>