objects/Case/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Sprint 8 CTP-83 is required to show call type in report in a particular sequence.</description>
    <formula>IF(AND((ISPICKVAL(Type,&#39;ILAS NB&#39;)),(LEFT(Branch_Code__c , 2)=&#39;89&#39;)), &#39;Macau ILAS NB&#39;,IF((ISPICKVAL(Type,&#39;ILAS NB&#39;)), &#39;HK ILAS NB&#39;,IF((ISPICKVAL(Type,&#39;Non-ILAS NB&#39;)),&#39;HK Non-ILAS NB&#39;,IF((ISPICKVAL(Type,&#39;FNA Suitability Mismatch&#39;)),&#39;FNA Mismatch&#39;,IF((ISPICKVAL(Type,&#39;ILAS &amp; Non-ILAS PM&#39;)),&#39;PM&#39;,IF((ISPICKVAL(Type,&#39;Unassigned Customer&#39;)),&#39;Unassigned Customer&#39;,&#39;&#39;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Type</label>
    <type>Text</type>
</CustomField>