objects/Case/fields/cct_Case_Team__c.field-meta.xml
<CustomField>
    <fullName>cct_Case_Team__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Team</label>
    <type>Text</type>
</CustomField>