objects/Case/fields/cct_Child_Case_Creator__c.field-meta.xml
<CustomField>
    <fullName>cct_Child_Case_Creator__c</fullName>
    <formula>IF(CreatedById = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Case Creator</label>
    <type>Checkbox</type>
</CustomField>