objects/Case/fields/Change_To__c.field-meta.xml
<CustomField>
    <fullName>Change_To__c</fullName>
    <label>Change To</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>