objects/Case/fields/Check_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Check_Holiday__c</fullName>
    <formula>TEXT(BusinessHours.FridayEndTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Holiday</label>
    <type>Text</type>
</CustomField>