objects/Case/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>IF (
AND(Account.RecordType.DeveloperName = &#39;Restricted Person Account&#39;, TEXT(Account.Customer_Tier__c) = &#39;Standard&#39;), &#39;Staff&#39;,
IF((AND(Account.RecordType.DeveloperName = &#39;Person Account&#39;, TEXT(Account.Customer_Tier__c) = &#39;VIP&#39;)),&#39;VIP&#39;,
&#39;Standard&#39;)
)</formula>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>