objects/Case/fields/Deceased_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Indicator__c</fullName>
    <description>Created to track if the advisor is deceased. Sprint- 6 PSI-41 - CTP-56</description>
    <label>Deceased Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>