objects/Case/fields/Direct_Hyperlink_1__c.field-meta.xml
<CustomField>
    <fullName>Direct_Hyperlink_1__c</fullName>
    <description>To show details of the case like interactions, comments etc. (TBD) .</description>
    <formula>HYPERLINK("https://manulifehk--ccdev01.cs57.my.salesforce.com/apex/cct_Direct_Link_To_Hyperlink_Page?csId="&amp;CaseNumber , "Direct Link to SCB" , "_blank")</formula>
    <label>Direct Link to SCB</label>
    <type>Text</type>
</CustomField>