objects/Case/fields/Enquiry_type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_type__c</fullName>
    <label>Enquiry type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PWS</fullName>
            </value>
            <value>
                <fullName>CWS</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Plan Transfer In</fullName>
            </value>
            <value>
                <fullName>Intragroup</fullName>
            </value>
            <value>
                <fullName>Plan Transfer out</fullName>
            </value>
            <value>
                <fullName>ECA in</fullName>
            </value>
            <value>
                <fullName>ECA out</fullName>
            </value>
            <value>
                <fullName>P(M) / P(C)</fullName>
            </value>
            <value>
                <fullName>MMB</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>FRC</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Member / Scheme</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Reissue</fullName>
            </value>
            <value>
                <fullName>Explanation on Details</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Outstanding Document</fullName>
            </value>
            <value>
                <fullName>Memo Clarification (DCC)</fullName>
            </value>
            <value>
                <fullName>Hold Case / Withdrawal Request</fullName>
            </value>
            <value>
                <fullName>Special Approval</fullName>
            </value>
            <value>
                <fullName>E-quotation enquiry</fullName>
            </value>
            <value>
                <fullName>Disbursement Related</fullName>
            </value>
            <value>
                <fullName>Charges / Interest</fullName>
            </value>
            <value>
                <fullName>Fax Option</fullName>
            </value>
            <value>
                <fullName>Signature Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>