objects/Case/fields/ExpectedEndDataTime__c.field-meta.xml
<CustomField>
    <fullName>ExpectedEndDataTime__c</fullName>
    <label>Expected End Data Time</label>
    <type>DateTime</type>
</CustomField>