objects/Case/fields/First_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Assigned_Date__c</fullName>
    <label>First Assigned Date</label>
    <type>DateTime</type>
</CustomField>