objects/Case/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form1</fullName>
            </value>
            <value>
                <fullName>Form2</fullName>
            </value>
            <value>
                <fullName>Form3</fullName>
            </value>
            <value>
                <fullName>Form4</fullName>
            </value>
            <value>
                <fullName>Form5</fullName>
            </value>
            <value>
                <fullName>Form6</fullName>
            </value>
            <value>
                <fullName>Form7</fullName>
            </value>
            <value>
                <fullName>Form8</fullName>
            </value>
            <value>
                <fullName>Form9</fullName>
            </value>
            <value>
                <fullName>Form10</fullName>
            </value>
            <value>
                <fullName>Form11</fullName>
            </value>
            <value>
                <fullName>Form12</fullName>
            </value>
            <value>
                <fullName>Form13</fullName>
            </value>
            <value>
                <fullName>Form14</fullName>
            </value>
            <value>
                <fullName>Form15</fullName>
            </value>
            <value>
                <fullName>Form16</fullName>
            </value>
            <value>
                <fullName>Form17</fullName>
            </value>
            <value>
                <fullName>Form18</fullName>
            </value>
            <value>
                <fullName>Form19</fullName>
            </value>
            <value>
                <fullName>Form20</fullName>
            </value>
            <value>
                <fullName>Form21</fullName>
            </value>
            <value>
                <fullName>Form22</fullName>
            </value>
            <value>
                <fullName>Form23</fullName>
            </value>
            <value>
                <fullName>Form24</fullName>
            </value>
            <value>
                <fullName>Form25</fullName>
            </value>
            <value>
                <fullName>Form26</fullName>
            </value>
            <value>
                <fullName>Form27</fullName>
            </value>
            <value>
                <fullName>Form28</fullName>
            </value>
            <value>
                <fullName>Form29</fullName>
            </value>
            <value>
                <fullName>Form30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>