objects/Case/fields/HNW_Signal__c.field-meta.xml
<CustomField>
    <fullName>HNW_Signal__c</fullName>
    <description>To denote whether the Customer related to the Case is High Net Worth or not.</description>
    <label>HNW Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>