objects/Case/fields/Is2ndClaim__c.field-meta.xml
<CustomField>
    <fullName>Is2ndClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For eClaim</description>
    <label>Is2ndClaim</label>
    <type>Checkbox</type>
</CustomField>