objects/Case/fields/Latest_Task_Result__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Result__c</fullName>
    <defaultValue>"Not Yet Contact"</defaultValue>
    <label>Latest Task Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>