objects/Case/fields/MIS_Report_Date_Check__c.field-meta.xml
<CustomField>
    <fullName>MIS_Report_Date_Check__c</fullName>
    <formula>CASE( MOD( TODAY() - DATE(1900, 1, 7), 7), 1,(NOW() - 2), NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MIS Report Date Check</label>
    <type>DateTime</type>
</CustomField>