objects/Case/fields/new_case_indicator__c.field-meta.xml
<CustomField>
    <fullName>new_case_indicator__c</fullName>
    <formula>(IF( DATEVALUE(SlaStartDate) = TODAY(), &#39;Y&#39;, &#39;N&#39;))</formula>
    <label>new_case_indicator</label>
    <type>Text</type>
</CustomField>