objects/Case/fields/New_Servicing_Advisor__c.field-meta.xml
<CustomField>
    <fullName>New_Servicing_Advisor__c</fullName>
    <description>To Fetch the Policy account role with the role as Agent Sprint 5 PSI-27 |CTP-41</description>
    <label>New Servicing Advisor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>