objects/Case/fields/Offering_Type__c.field-meta.xml
<CustomField>
    <fullName>Offering_Type__c</fullName>
    <description>Offer to Unassigned Customer</description>
    <label>Offering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADB Cert.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>