objects/Case/fields/Overdue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Reason__c</fullName>
    <label>Overdue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding Documents</fullName>
            </value>
            <value>
                <fullName>Outstanding Payments</fullName>
            </value>
            <value>
                <fullName>Wait for Agent&#39;s Reply</fullName>
            </value>
            <value>
                <fullName>Wait for Approval</fullName>
            </value>
            <value>
                <fullName>Wait for Attended Physician Statement (APS)</fullName>
            </value>
            <value>
                <fullName>Wait for Client&#39;s Reply</fullName>
            </value>
            <value>
                <fullName>Wait for Copy or Original of Application</fullName>
            </value>
            <value>
                <fullName>Wait for Doctor&#39;s Report</fullName>
            </value>
            <value>
                <fullName>Wait for the Specific Day Processing</fullName>
            </value>
            <value>
                <fullName>Wait for System Processing</fullName>
            </value>
            <value>
                <fullName>Other Specify in Remarks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>