objects/Case/fields/Policy_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cert. No.</label>
    <referenceTo>Policy_Certificate__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>