objects/Case/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>To get the Policy Number of the related policy from the Policy Reference Table.
PLEASE NOTE : This field can be deprecated IF the Look Up value to Policy on Case holds the Policy Number itself  - i.e. the Name field of the Policy Reference stores the Policy Number itself - Please confirm.</description>
    <formula>Policy__r.Policy_Number__c</formula>
    <label>Policy No.</label>
    <type>Text</type>
</CustomField>