objects/Case/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <description>To get the status of the related policy from the Policy Reference Table.</description>
    <formula>IF(
ISBLANK(Policy_Certificate__c),
TEXT(Policy__r.Policy_Status__c),
TEXT(Policy_Certificate__r.Status__c)
)</formula>
    <label>Policy Status</label>
    <type>Text</type>
</CustomField>