objects/Case/fields/Prev_Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Prev_Advisor_Name__c</fullName>
    <description>To Display Previous advisor name Sprint 5 PSI-27 |CTP-41</description>
    <label>Prev. Advisor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>