objects/Case/fields/Prev_Advisor_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Prev_Advisor_Term_Date__c</fullName>
    <description>To Display the fetch term date from Account Relationship role. Sprint 5 PSI-27 |CTP-41</description>
    <label>Prev. Advisor Term. Date</label>
    <type>DateTime</type>
</CustomField>