objects/Case/fields/SBT__c.field-meta.xml
<CustomField>
    <fullName>SBT__c</fullName>
    <formula>CASE(TEXT(Status),
   &#39;Closed&#39;, NULL,
   &#39;Waiting on Customer&#39;, NULL,
   IF(ISNULL(TargetDate__c),
      NULL,
      FLOOR((TargetDate__c - NOW())*24*60)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>