objects/Case/fields/Sex_of_New_Servicing_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Sex_of_New_Servicing_Advisor__c</fullName>
    <description>To Capture the Sex of New servicing advisor Sprint 5 PSI-27 |CTP-41</description>
    <label>Sex of New Servicing Advisor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>