objects/Case/fields/Sex_of_Policy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sex_of_Policy_Owner__c</fullName>
    <description>To display sex of policy owner Sprint 5 PSI-27 |CTP-41 PSI-23 |CTP-37</description>
    <formula>TEXT(Account.PersonContact.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sex of Policy Owner</label>
    <type>Text</type>
</CustomField>