objects/Case/fields/Sex_of_Servicing_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Sex_of_Servicing_Advisor__c</fullName>
    <description>To Display sex of Servicing advisor Sprint 5 PSI-27 |CTP-41 PSI-23 |CTP-37</description>
    <label>Sex of Servicing Advisor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>