objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agent Service</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Remittance/Payment Method Related</fullName>
            </value>
            <value>
                <fullName>Contribution Status / Outstanding Contribution</fullName>
            </value>
            <value>
                <fullName>Calculation</fullName>
            </value>
            <value>
                <fullName>Legislation</fullName>
            </value>
            <value>
                <fullName>Surcharge Enquiry (Reason/Reporting/Legislation)</fullName>
            </value>
            <value>
                <fullName>Surcharge Appeal</fullName>
            </value>
            <value>
                <fullName>CDR / Cont Hole Pack / ER Pack / ER Monthly Follow-up Summary</fullName>
            </value>
            <value>
                <fullName>Form Request</fullName>
            </value>
            <value>
                <fullName>How to fill</fullName>
            </value>
            <value>
                <fullName>Report / Statement Request</fullName>
            </value>
            <value>
                <fullName>Mail Cont Hole Pack</fullName>
            </value>
            <value>
                <fullName>CSC Use - Cont Doc Submission</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Reissue NOP</fullName>
            </value>
            <value>
                <fullName>Enrollment Correction</fullName>
            </value>
            <value>
                <fullName>MBS Enquiry</fullName>
            </value>
            <value>
                <fullName>Account Information (e.g. Balance, Contribution status)</fullName>
            </value>
            <value>
                <fullName>Fund Choice Management</fullName>
            </value>
            <value>
                <fullName>Fund Info</fullName>
            </value>
            <value>
                <fullName>Account Information</fullName>
            </value>
            <value>
                <fullName>Account Balance</fullName>
            </value>
            <value>
                <fullName>Login Issue</fullName>
            </value>
            <value>
                <fullName>Reset PIN</fullName>
            </value>
            <value>
                <fullName>Technical Problem</fullName>
            </value>
            <value>
                <fullName>How to Use/ Navigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>