objects/Case/fields/TargetDate__c.field-meta.xml
<CustomField>
    <fullName>TargetDate__c</fullName>
    <label>TargetDate</label>
    <type>DateTime</type>
</CustomField>