objects/Case/fields/Treatment_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Subtype__c</fullName>
    <label>Treatment Subtype</label>
    <length>16</length>
    <type>Text</type>
</CustomField>