objects/Case/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <description>for eClaim</description>
    <label>Treatment Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>