objects/Case/fields/Yrs_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Yrs_of_Service__c</fullName>
    <description>To Calculate and display total duration between term start date and end date Sprint 5 PSI-27 |CTP-41</description>
    <label>Yrs. of Service</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>