objects/Case/recordTypes/eClaims.recordType-meta.xml
<RecordType>
    <fullName>eClaims</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <description>This record type is to be used for eClaim project</description>
    <label>eClaims</label>
</RecordType>