objects/Case/recordTypes/GLH.recordType-meta.xml
<RecordType>
    <fullName>GLH</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>GLH</label>
</RecordType>