objects/Case/recordTypes/GP.recordType-meta.xml
<RecordType>
    <fullName>GP</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>GP</label>
</RecordType>