objects/Case/recordTypes/IFP.recordType-meta.xml
<RecordType>
    <fullName>IFP</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>IFP</label>
</RecordType>