objects/Case/recordTypes/Inbound_Advisor_Phone_Call.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Advisor_Phone_Call</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Advisor Phone Call</label>
</RecordType>