objects/Case/recordTypes/Inbound_Child_Closed_Case.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_Closed_Case</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child Closed Case</label>
</RecordType>