objects/Case/recordTypes/Inbound_Child_GLH_Advisor.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_GLH_Advisor</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child GLH Advisor</label>
</RecordType>