objects/Case/recordTypes/Inbound_Child_GLH_Customer.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_GLH_Customer</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child GLH Customer</label>
</RecordType>