objects/Case/recordTypes/Inbound_Child_GP_Advisor.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_GP_Advisor</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child GP Advisor</label>
</RecordType>