objects/Case/recordTypes/Inbound_Child_GP_Customer.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_GP_Customer</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child GP Customer</label>
</RecordType>