objects/Case/recordTypes/Inbound_Child_IFP_Advisor.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_IFP_Advisor</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child IFP Advisor</label>
</RecordType>