objects/Case/recordTypes/Inbound_Child_IFP_Customer.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Child_IFP_Customer</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Child IFP Customer</label>
</RecordType>