objects/Case/recordTypes/Inbound_Customer_Phone_Call.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Customer_Phone_Call</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound Customer Phone Call</label>
</RecordType>