objects/Case/recordTypes/Inbound_GLH_Advisor.recordType-meta.xml
<RecordType>
    <fullName>Inbound_GLH_Advisor</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <description>Contact Centre Created for Inbound Advisor</description>
    <label>Inbound GLH Advisor</label>
</RecordType>