objects/Case/recordTypes/Inbound_GLH_Customer.recordType-meta.xml
<RecordType>
    <fullName>Inbound_GLH_Customer</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound GLH Customer</label>
</RecordType>