objects/Case/recordTypes/Inbound_GP_Customer.recordType-meta.xml
<RecordType>
    <fullName>Inbound_GP_Customer</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound GP Customer</label>
</RecordType>