objects/Case/recordTypes/Inbound_IFP_Advisor.recordType-meta.xml
<RecordType>
    <fullName>Inbound_IFP_Advisor</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <description>Contact Center - Created for Inbound Advisor</description>
    <label>Inbound IFP Advisor</label>
</RecordType>