objects/Case/recordTypes/Inbound_WAM_Customer.recordType-meta.xml
<RecordType>
    <fullName>Inbound_WAM_Customer</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Inbound WAM Customer</label>
</RecordType>