objects/Case/recordTypes/Orphan_Permissive.recordType-meta.xml
<RecordType>
    <fullName>Orphan_Permissive</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <description>This record type will be used by Orphan Parent Cases during pre-closure period.</description>
    <label>Orphan Permissive</label>
</RecordType>