objects/Case/recordTypes/Orphan_Restrictive.recordType-meta.xml
<RecordType>
    <fullName>Orphan_Restrictive</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <description>This record type will be used by Orphan Parent Cases post-closure case-freeze period and Orphan Child Cases</description>
    <label>Orphan Restrictive</label>
</RecordType>