objects/Case/recordTypes/Post_Sales_Permissive.recordType-meta.xml
<RecordType>
    <fullName>Post_Sales_Permissive</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <description>This record type will be used by Post-sales Cases during pre-closure period.</description>
    <label>Post Sales Permissive</label>
</RecordType>